<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.stephen.friendsnotebook.view.CreateFriendFragment"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"/>
    <EditText
        android:id="@+id/phone_number_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="phone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expression"/>
    <EditText
        android:id="@+id/expression_et"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:inputType="text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/github_url"/>
    <EditText
        android:id="@+id/github_url_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="textUri"/>
    <Button
        android:id="@+id/create_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_create"
        android:gravity="center"/>
</LinearLayout>
